Fixed remember me item height too short
Using looser csp rules for livereload
Automatically removing livereload csp rule for prod builds

--- a/toc/app/components/password-prompt-modal/password-prompt-modal.scss
+++ b/toc/app/components/password-prompt-modal/password-prompt-modal.scss
@@ -4,9 +4,11 @@
   .toggle {
     top: 20px;
   }
-  .item-note {
+  span {
     display: block;
+  }
+  .item-note {
     margin-top: 10px;
-    float: unset;
+    float: none;
   }
 }
